<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/np_name"
        android:labelFor="@id/np_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:hint="@string/np_name"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:id="@+id/np_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/np_input_unit"
                android:labelFor="@id/np_unit_spinner"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/np_unit_spinner"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:orientation="vertical">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/np_output_unit"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="***"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:id="@+id/np_output_unit"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/np_mass_volume"
        android:layout_marginTop="30dp"
        android:labelFor="@id/np_mass_volume"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="@string/np_mass_volume"
        android:inputType="numberDecimal"
        android:id="@+id/np_mass_volume"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/np_price"
        android:layout_marginTop="30dp"
        android:labelFor="@id/np_price"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/np_price"
        android:gravity="end"
        android:id="@+id/np_price"
        android:inputType="numberDecimal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/np_package_deal"
        android:layout_marginTop="30dp"
        android:labelFor="@id/np_package_deal"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/np_package_deal"
        android:inputType="number"
        android:id="@+id/np_package_deal"
        android:gravity="end"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        android:layout_marginBottom="5dp"
        android:id="@+id/np_ok"/>
</LinearLayout>